# pre-commit-formatter

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml  result_pre_commit.html  ruff.toml  setup.cfg
.github/: .copilot-commit-message-instructions.md
.github/workflows/: python-publish.yml
docs/: CODE_OF_CONDUCT-pt.md  CONTRIBUTING-pt.md  README-pt.md
pre-commit-formatter/: __init__.py  __main__.py
pre-commit-formatter/site/templates/: code_error.jinja  code_part.jinja  html_content.jinja
pre_commit_html/: __init__.py  __main__.py  main.py
pre_commit_html/site/templates/: html_content.jinja
results/: bandit.html
