[metadata]
name = pre_commit_html
version = 0.1.3
description = Format results from pre-commit cmd to HTML file
author = Robotz213
author_email = nicholas@robotz.dev
license = MIT
long_description = file: README.md

[options]
python_requires = >=3.13
install_requires =
    pre-commit>=4.1.0,<5.0.0
    jinja2>=3.1.5,<4.0.0

[options.entry_points]
console_scripts =
    pre-commit-html = pre_commit_html:__main__
